--- a/client/src/Components/chatboxComponents/Allchats/chatsList.module.scss
+++ b/client/src/Components/chatboxComponents/Allchats/chatsList.module.scss
@@ -53,6 +53,8 @@
             display:flex;
             flex-direction: column;
             align-items: center;
+            list-style: none;
+            width: 100%;
             .Messages{
             margin-top:1rem;
             list-style: none;
@@ -61,28 +63,6 @@
             flex-direction: column;
             gap:1.5rem;
             width: 90%;
-            .pinned_Messages{
-                .head{
-                    align-items: center;
-                    display:flex;
-                    padding: 0;
-                    margin: 0;
-                    font-family: $fontRoboto;
-                    color: gainsboro;
-                    gap:0.5rem;
-                    font-size: small;
-                    font-weight: 500;
-                }
-            }
-            .pinned_item_list{
-                list-style: none;
-                padding: 0;
-                margin: 0;
-                display:flex;
-                flex-direction: column;
-                max-height: 40vw;
-                gap:0.2rem;
-            }
         }
     }
 }
