--- a/client/src/styles/GoogleOauthButton.module.scss
+++ b/client/src/styles/GoogleOauthButton.module.scss
@@ -7,7 +7,7 @@
     border-radius: 6px;
     border: 1px solid black;
     background-color: white;
-    padding: 0 18px;
+    padding: 8px 18px;
     cursor: pointer;
 
     .google_icon {
@@ -33,7 +33,7 @@
         }
         @media screen and (min-width:$BigDesktopScreen) {
             width: 25px;
-            height: 25px;
+            height: 32px;
         }
     }
 
