--- a/client/src/styles/LoginForm.module.scss
+++ b/client/src/styles/LoginForm.module.scss
@@ -7,7 +7,7 @@
     position: relative;
     gap:1rem;
     @media screen and (min-width:$BigDesktopScreen) {
-        gap:2rem;
+        gap:1rem;
         width:30vw;
     }
     .close_login_popup_btn{
@@ -27,10 +27,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 2rem;
+        gap: 1rem;
         
         @media screen and (min-width:$BigDesktopScreen) {
-            gap: 3rem;
+            gap: 1rem;
         }
         
         .topImage {
@@ -38,8 +38,8 @@
             height: 80px;
             
             @media screen and (min-width:$BigDesktopScreen) {
-                width: 280px;
-                height: 160px;
+                width: 240px;
+                height: 140px;
             }
         }
         
@@ -49,9 +49,9 @@
             align-items: center;
             gap: 0.5rem;
 
-            // @media screen and (min-width:$BigDesktopScreen){
-            //     gap:2rem;
-            // }
+            @media screen and (min-width:$BigDesktopScreen){
+                gap:0.6rem;
+            }
             .greetings {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 500;
@@ -71,11 +71,6 @@
                 font-weight: 300;
                 color: rgb(83, 83, 83);
                 font-size: smaller;
-
-                @media screen and (min-width:$BigDesktopScreen) {
-                    font-size: larger;
-                }
-
             }
         }
 
@@ -85,18 +80,16 @@
         display: flex;
         position: relative;
         justify-content: center;
-        
         .hr {
             width: 80%;
         }
         
         .text {
             position: absolute;
-            padding: 0;
-            bottom: 0;
+            bottom:-6px;
             margin: 0;
             background-color: white;
-            width: 20%;
+            width: 10%;
             text-align: center;
             
             @media screen and (min-width:$BigDesktopScreen) {
@@ -117,7 +110,7 @@
             width: 80%;
 
             @media screen and (min-width:$BigDesktopScreen) {
-                gap: 3rem;
+                gap: 2rem;
                 width: 60%;
             }
 
